--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+"name": "Amy's Portfolio",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "client": "cd client && npm start"
+   
+  },
+
   "dependencies": {
     "babel-loader": "^9.1.2",
     "react": "^18.2.0",
